; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_ra_svn/extr_client.c_ra_svn_status.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_ra_svn/extr_client.c_ra_svn_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_7__* }
%struct.TYPE_7__ = type { i32* }

@SVN_NO_ERROR = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.TYPE_8__*, i32**, i8**, i8*, i32, i32, i32*, i8*, i32*)* @ra_svn_status to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @ra_svn_status(%struct.TYPE_8__* %0, i32** %1, i8** %2, i8* %3, i32 %4, i32 %5, i32* %6, i8* %7, i32* %8) #0 {
  %10 = alloca %struct.TYPE_8__*, align 8
  %11 = alloca i32**, align 8
  %12 = alloca i8**, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32*, align 8
  %17 = alloca i8*, align 8
  %18 = alloca i32*, align 8
  %19 = alloca %struct.TYPE_7__*, align 8
  %20 = alloca i32*, align 8
  %21 = alloca i32, align 4
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %10, align 8
  store i32** %1, i32*** %11, align 8
  store i8** %2, i8*** %12, align 8
  store i8* %3, i8** %13, align 8
  store i32 %4, i32* %14, align 4
  store i32 %5, i32* %15, align 4
  store i32* %6, i32** %16, align 8
  store i8* %7, i8** %17, align 8
  store i32* %8, i32** %18, align 8
  %22 = load %struct.TYPE_8__*, %struct.TYPE_8__** %10, align 8
  %23 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %22, i32 0, i32 0
  %24 = load %struct.TYPE_7__*, %struct.TYPE_7__** %23, align 8
  store %struct.TYPE_7__* %24, %struct.TYPE_7__** %19, align 8
  %25 = load %struct.TYPE_7__*, %struct.TYPE_7__** %19, align 8
  %26 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %25, i32 0, i32 0
  %27 = load i32*, i32** %26, align 8
  store i32* %27, i32** %20, align 8
  %28 = load i32, i32* %15, align 4
  %29 = call i32 @DEPTH_TO_RECURSE(i32 %28)
  store i32 %29, i32* %21, align 4
  %30 = load %struct.TYPE_8__*, %struct.TYPE_8__** %10, align 8
  %31 = load i32*, i32** %18, align 8
  %32 = call i32 @ensure_exact_server_parent(%struct.TYPE_8__* %30, i32* %31)
  %33 = call i32 @SVN_ERR(i32 %32)
  %34 = load i32*, i32** %20, align 8
  %35 = load i32*, i32** %18, align 8
  %36 = load i8*, i8** %13, align 8
  %37 = load i32, i32* %21, align 4
  %38 = load i32, i32* %14, align 4
  %39 = load i32, i32* %15, align 4
  %40 = call i32 @svn_ra_svn__write_cmd_status(i32* %34, i32* %35, i8* %36, i32 %37, i32 %38, i32 %39)
  %41 = call i32 @SVN_ERR(i32 %40)
  %42 = load %struct.TYPE_7__*, %struct.TYPE_7__** %19, align 8
  %43 = load i32*, i32** %18, align 8
  %44 = call i32 @handle_auth_request(%struct.TYPE_7__* %42, i32* %43)
  %45 = call i32 @SVN_ERR(i32 %44)
  %46 = load %struct.TYPE_7__*, %struct.TYPE_7__** %19, align 8
  %47 = load i32*, i32** %18, align 8
  %48 = load i32*, i32** %16, align 8
  %49 = load i8*, i8** %17, align 8
  %50 = load i8*, i8** %13, align 8
  %51 = load i32, i32* %15, align 4
  %52 = load i32**, i32*** %11, align 8
  %53 = load i8**, i8*** %12, align 8
  %54 = call i32 @ra_svn_get_reporter(%struct.TYPE_7__* %46, i32* %47, i32* %48, i8* %49, i8* %50, i32 %51, i32** %52, i8** %53)
  %55 = call i32 @SVN_ERR(i32 %54)
  %56 = load i32*, i32** @SVN_NO_ERROR, align 8
  ret i32* %56
}

declare dso_local i32 @DEPTH_TO_RECURSE(i32) #1

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @ensure_exact_server_parent(%struct.TYPE_8__*, i32*) #1

declare dso_local i32 @svn_ra_svn__write_cmd_status(i32*, i32*, i8*, i32, i32, i32) #1

declare dso_local i32 @handle_auth_request(%struct.TYPE_7__*, i32*) #1

declare dso_local i32 @ra_svn_get_reporter(%struct.TYPE_7__*, i32*, i32*, i8*, i8*, i32, i32**, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
